2.6.0:
- New: changes are shown after update
- New: feedback section
- Improved: max. shape size now bigger for tablets
- Improved: wallpapers optimized for landscape mode
- Fixed: laggy animations after resizing shapes in settings

2.5.0:
- New: support for zoom effect on Android 11
- Improved: show warning when default launcher is TouchWiz
- Improved: sliders for customization
- Improved: haptic feedback in settings
- Improved: animation efficiency by using frame rate of the device

2.4.0:
- New: haptic feedback in settings
- Improved: settings interface
- Fixed: crash on boot caused by missing access to preferences

2.3.0:
- New: Jost* typeface
- New: animated splash screen in settings
- New: immersive fullscreen experience in settings
- New: medium size option
- New: start with boot
- New: wallpaper description
- New: optimized for Android 11 and support down to Android 6
- Improved: more information in settings
- Improved: internal cleanup
- Fixed: color changes not being applied to launcher

2.2.0:
- Improved: app icon
- Improved: internal cleanup

2.1.2:
- Improved: settings update
- Fixed: theme selection

2.1.1:
- Improved: description and appearance
- Fixed: interface style